# sistema-gerenciamento-tarefas

./: CMakeLists.txt  README.md  cindex  flowchart.md  main  main.c  remover_tarefas.c  remover_tarefas.h  task-manager.c  task-manager.h
